all attributes plus first theme